/*
 * Copyright (C) 2019  Bogdan Oancea
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * any later version and under the EUPL free software license version 1.0 or later.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/> and
 * <https://ec.europa.eu/info/european-union-public-licence_en>
 *
 * A data simulator for mobile phone network events
 *
 * CellIDEvent.h
 *
 *  Created on: Oct 20, 2020
 *      Author: Bogdan Oancea
 *      Email : bogdan.oancea@gmail.com
 */

#ifndef SRC_EVENTS_CELLIDEVENT_H_
#define SRC_EVENTS_CELLIDEVENT_H_

#include <events/Event.h>
#include <events/EventConfig.h>

/**
 * This class encapsulates the information that need to be saved when a network event is generated by the interaction
 * between a mobile device and the  network. The "Cell ID" event contains the timestamp of the event, the cell id (antenna id), the
 * event code (@see EventType enumeration for the possible values), the device id and the network type (one of the
 * NetworkType::_3G or NetworkType::_4G values).
 */
class CellIDEvent: public Event {
public:
	/**
	 * This is the factory class that creates Event objects.
	 */
	friend class EventFactory;

	/**
	 * Builds and returns a csv string with the information of the event. This this contains the timestamp of the event,
	 * the cell id (antenna id), the event code (@see EventType enumeration for the possible values), the device id
	 * and the network type (one of the NetworkType::_3G or NetworkType::_4G values).
	 * @return a csv string with the parameters of the event.
	 */
	virtual const string toString() override;

	/**
	 * Returns a pointer to the EventConfig object containing the information used by the factory class to create this event object.
	 * This pointer actually points to a CellIDEventconfig object.
	 * @return a pointer to the EventConfig object containing the information used by the factory class to create this event object.
	 */
	virtual EventConfig* getEventConfig() override;

	/**
	 * Default destructor
	 */
	virtual ~CellIDEvent();

protected:
	CellIDEvent(EventConfig* conf);

private:
	EventConfig* m_config;
};

#endif /* SRC_EVENTS_CELLIDEVENT_H_ */
