/*
 * Copyright (C) 2019  Bogdan Oancea
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * any later version and under the EUPL free software license version 1.0 or later.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/> and
 * <https://ec.europa.eu/info/european-union-public-licence_en>
 *
 * A data simulator for mobile phone network events
 *
 * CellIDTAEvent.h
 *
 *  Created on: Oct 20, 2020
 *      Author: Bogdan Oancea
 *      Email : bogdan.oancea@gmail.com
 */

#ifndef CELLIDTAEVENT_H_
#define CELLIDTAEVENT_H_

#include <events/Event.h>
#include <events/CellIDTAEventConfig.h>
#include <string>


/**
 * This class encapsulates the information that need to be saved when a network event is generated by the interaction
 * between a mobile device and the  network. The "Cell ID TA" event contains the timestamp of the event, the cell id (antenna id), the
 * event code (@see EventType enumeration for the possible values), the device id and the network type (one of the
 * NetworkType::_3G or NetworkType::_4G values) and the timing advance (TA) value.
 */
class CellIDTAEvent: public Event {
public:
	/**
	 * This is the factory class that creates Event objects.
	*/
	friend class EventFactory;

	/**
	 * Builds and returns a csv string with the information of the event. This this contains the timestamp of the event,
	 * the cell id (antenna id), the event code (@see EventType enumeration for the possible values), the device id
	 * and the network type (one of the NetworkType::_3G or NetworkType::_4G values) and the timing advance (TA) value.
	 * Time advancing corresponds to the length of time a signal takes to reach the base station (antenna) from a mobile phone.
	 * For 3G networks the TA value is normally between 0 and 219 (we use the extended range of TA), one TA step representing a change in round-trip distance
	 * (twice the propagation range) of about 1,108 m which means that the mobile device is at 554 m from the base station (antenna).
	 * For 4G networks the TA value is normally between 0 and 1282, one TA step corresponds to a 156.14 m in round-trip distance,
	 * which means a distance of 78.07 m between the mobile device and the base station (antenna).
	 * @return a csv string with the parameters of the event.
	 */
	virtual const string toString() override;

	/**
	 * Returns a pointer to the EventConfig object containing the information used by the factory class to create this event object.
	 * This pointer actually points to a CellIDTAEventconfig object.
	 * @return a pointer to the EventConfig object containing the information used by the factory class to create this event object.
	 */
	virtual EventConfig* getEventConfig() override;

	/**
	 * Default destructor.
	 */
	virtual ~CellIDTAEvent();

protected:
	CellIDTAEvent(EventConfig* config);

private:
	EventConfig* m_config;
};

#endif /* SRC_EVENTS_CELLIDTAEVENT_H_ */
